[B]1.9.5[/B]

- Revisada la búsqueda de información adicional en TMDB

[B]1.9.4[/B]

- Revisada la búsqueda de URL en ficheros .nfo
- Actualizada la conexión con TMDB

[B]1.9.3[/B]

- Actualizada la conexión con TMDB

[B]1.9.2[/B]

- Revisada la búsqueda de colecciones en TMDB

[B]1.9.1[/B]

- Actualizada la conexión con TMDB

[B]1.9.0[/B]

- Revisión general del scraper
- Reorganizada la configuración
- Uso de TMDB como pasarela de información extra
- Eliminada la búsqueda de posters en IMDB

[B]1.8.1[/B]

- Revisada la búsqueda de posters en IMDB

[B]1.8.0[/B]

- Eliminada la búsqueda de posters en FA
- Eliminada la búsqueda de posters en Trakt
- Eliminada la búsqueda de fanart en Trakt
- Revisada la búsqueda de posters y fanart en Fanart.tv
- Revisada la búsqueda de posters en IMDB
- Revisada la búsqueda de director

[B]1.7.6[/B]

- Revisada la búsqueda de trailers en FA

[B]1.7.5[/B]

- Eliminada la obtención de posters de movieposterdb

[B]1.7.4[/B]

- Cambiadas las rutas http por https en FA

[B]1.7.3[/B]

- Revisadas las búsquedas de título original,
  duración, género, guión y país en FA

[B]1.7.2[/B]

- Revisada la búsqueda de año en FA

[B]1.7.1[/B]

- Revisada la búsqueda avanzada de título en FA
- Revisada la búsqueda de título original en FA
- Corregida la búsqueda de género para no incluir topics

[B]1.7.0[/B]

- Búsqueda unificada tanto en FA como en FA mobile
- Se mantiene la elección de FA o FA mobile para dar redundancia

[B]1.6.4[/B]

- Revisada la búsqueda de país
- Limpiadas las referencias a IMPA - HDTrailers

[B]1.6.3[/B]

- Revisada la búsqueda de director
- Revisada la búsqueda de puntuación FA
- Revisada la búsqueda en ficheros .nfo

[B]1.6.2[/B]

- Revisada la carga de información de ficheros .nfo
- Revisada la obtención del póster principal de FilmAffinity

[B]1.6.1[/B]

- Añadida la posibilidad de elegir entre la web móvil o principal de FilmAffinity
- Revisados los patrones de búsqueda en FilmAffinity

[B]1.6.0[/B]
