@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.1" date="2019-10-06">
+<scraper framework="1.1" date="2020-10-26">
 
 	<!--obtención de la url desde el fichero .nfo -->
 	<NfoUrl dest="3">
@@ -89,9 +89,12 @@
 			</RegExp>
 			
 			<!-- título original -->
-			<!-- eliminar "(Disneys's )?" y usar \1 cuando filmaffinity deje de añadirlo) -->
-			<RegExp input="$$1" output="\2" dest="12">
-				<expression trim="1">T[ií]tulo original[^&lt;]*&lt;/dt&gt;(Disney's )?(.+?)(\(AKA|aka +&lt;|&lt;/dd&gt;)</expression>
+			<RegExp input="$$1" output="\1" dest="12">
+				<expression trim="1">T[ií]tulo original[^&lt;]*&lt;/dt&gt;(.+?)(\(AKA|aka +&lt;|&lt;/dd&gt;)</expression>
+			</RegExp>
+			<!-- eliminar "(Disneys's )?" mientras filmaffinity lo añada -->
+			<RegExp input="$$12" output="\1" dest="12">
+				<expression>^Disney's (.+)</expression>
 			</RegExp>
 			<RegExp input="$$12" conditional="EnableOriginalTitles" output="&lt;title&gt;\1&lt;/title&gt;" dest="5">
 				<expression noclean="1" />
@@ -119,6 +122,7 @@
 				<expression repeat="yes" trim="1">(.+?),?\s\s+</expression>
 			</RegExp>
 			<!-- dirección (apellidos) para refinar búsqueda del IMDBid -->
+			<!-- funcionaba con la API de IMDB, la de TMDB no tiene director -->
 <!--
 			<RegExp input="$$5" output="\1|" dest="14">
 				<expression repeat="yes">([^ ]+)&lt;/director</expression>
@@ -150,6 +154,9 @@
 			<RegExp input="$$9" output="&lt;country&gt;\1&lt;/country&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="9">
 					<expression trim="1">Pa[ií]s[^&lt;]*&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
+				</RegExp>
+				<RegExp input="$$9" output="\1" dest="9">
+					<expression>&nbsp;(.+)</expression>
 				</RegExp>
 				<expression repeat="yes" trim="1">([A-Z][^0-9/]+)</expression>
 			</RegExp>
@@ -189,35 +196,38 @@
 			<RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="5+">
 				<expression>Sinopsis[^&lt;]*&lt;/dt&gt;(.+?)(\(FILMAFFINITY\)|&lt;/dd&gt;)</expression>
 			</RegExp>
+			<!-- algún nombre propio en la sinopsis para refinar búsqueda del IMDBid -->
+			<!-- debería hacerlo, pero por algún motivo [A-Z] no distingue mayúsculas -->
+<!--
+			<RegExp input="$$1" output="\1" dest="14">
+				<expression noclean="1" >Sinopsis[^&lt;]*&lt;/dt&gt;.+?[a-z] ([A-Z][a-z]+)[^&lt;]*(\(FILMAFFINITY\)|&lt;/dd&gt;)</expression>
+			</RegExp>
+-->
 			
 			<!-- obtención del IMDBid (ha de ir antes de cualquier función que limpie los buffers) -->
 			<RegExp input="$$9" output="&lt;url function=&quot;GetIMDBid&quot;&gt;\1&lt;/url&gt;" dest="5+">
-				<!-- unimos título en español de $$11 con título original de $$12, -->
-				<!-- los descomponemos en palabras por caracteres las unimos con "+" -->
-				<RegExp input="$$11 $$12" output="\1+" dest="9">
-					<!-- caracteres latinos UTF-8, números y aperturas de paréntesis -->
+				<!-- buscamos el título original de $$12 con el año -->
+				<RegExp input="$$12" output="\1+" dest="9">
+					<!-- caracteres latinos UTF-8, números y caracteres html especiales -->
 					<!-- fuente: http://www.w3schools.com/charsets/ref_html_utf8.asp -->
-					<expression repeat="yes">([\(a-zA-Z0-9&#192;-&#591;]+)</expression>
-				</RegExp>
-				<!-- búsqueda en TMDB -->
-				<!-- <RegExp conditional="!GoogleAdvSearch" input="$$9" output="https://api.themoviedb.org/3/search/movie?api_key=$$19&amp;language=$INFO[tmdblanguage]&amp;query=\1" dest="9"> -->
-				<RegExp conditional="!GoogleAdvSearch" input="$$9" output="https://api.themoviedb.org/3/search/movie?api_key=$$19&amp;language=$INFO[tmdblanguage]&amp;query=\1&amp;year=$$13" dest="9">
-				<!-- <RegExp conditional="!GoogleAdvSearch" input="$$9" output="https://api.themoviedb.org/3/search/movie?api_key=$$19&amp;language=$INFO[tmdblanguage]&amp;query=\1&amp;primary_release_year=$$13" dest="9"> -->
-					<!-- descomponemos de nuevo en palabras por caracteres las unimos con "+" -->
-					<RegExp input="$$9" output="\1+" dest="9">
-						<!-- caracteres latinos UTF-8, números y aperturas de paréntesis -->
-						<!-- fuente: http://www.w3schools.com/charsets/ref_html_utf8.asp -->
-						<expression repeat="yes">([\(a-zA-Z0-9&#192;-&#591;]+)</expression>
-					</RegExp>
-					<expression noclean="1" />
+					<!-- permitimos "(", ":" para limpiarlos después -->
+					<expression repeat="yes">([\(:a-zA-Z0-9&#192;-&#591;&;]+)</expression>
 				</RegExp>
 				<!-- búsqueda en IMDB a través de google -->
 				<RegExp conditional="GoogleAdvSearch" input="$$9" output="https://www.google.com/search?q=site:imdb.com+\1($$13)" dest="9">
 					<expression noclean="1" />
 				</RegExp>
+				<!-- búsqueda en TMDB, descartando lo que haya después de "(" o ":" -->
+				<!-- debería poder hacerse en un único paso, pero no parece funcionar -->
+				<RegExp input="$$9" output="\1" dest="9">
+					<expression>(.+?)[\(:]</expression>
+				</RegExp>
+				<RegExp conditional="!GoogleAdvSearch" input="$$9" output="https://api.themoviedb.org/3/search/movie?api_key=$$19&amp;language=$INFO[tmdblanguage]&amp;query=\1&amp;year=$$13" dest="9">
+					<expression noclean="1" />
+				</RegExp>
 				<expression noclean="1" />
 			</RegExp>
-		
+			
 			<!-- trailer de filmaffinity -->
 			<RegExp conditional="EnableFATrailer" input="$$16" output="&lt;url function=&quot;GetFilmAffinityTrailer&quot;&gt;https://www.filmaffinity.com/es/evideos.php?movie_id=\1&lt;/url&gt;" dest="5+">
 				<expression noclean="1" />
@@ -251,13 +261,14 @@
 		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="3">
 
 			<!-- reseteamos la variable que almacenará el id de IMDB -->
+			<!-- <RegExp input="" output="0" dest="6"> -->
 			<RegExp input="" output="0" dest="6">
 				<expression noclean="1" />
 			</RegExp>
 			
 			<!-- obtención del id de IMDB si es a través de google -->
-			<RegExp conditional="GoogleAdvSearch" input="$$1" output="\1" dest="6">
-				<expression>/title/(tt[0-9]+)</expression>
+			<RegExp input="$$1" output="\1" dest="6">
+				<expression>.+?/title/(tt[0-9]+)</expression>
 			</RegExp>
 
 			<!-- obtención del id de IMDB a través de nfourl (sobreescribe si $$15 contiene algo) -->
@@ -284,9 +295,47 @@
 			<RegExp input="$$1" output="\1" dest="7">
 				<expression>&quot;id&quot;:([0-9]+)</expression>
 			</RegExp>
-			<!-- coincidencia con año -->
+			<!-- coincidencia con título original o español -->
 			<RegExp input="$$1" output="\1" dest="7">
-				<expression>&quot;id&quot;:([0-9]+)[^}]+&quot;release_date&quot;:&quot;$$13</expression>
+				<expression>&quot;id&quot;:([0-9]+)[^}]+title&quot;:&quot;($$12|$$11)&quot;</expression>
+			</RegExp>
+			
+			<!-- coincidencia con año -->
+			<RegExp input="$$18$$1" output="\1" dest="7">
+				<expression>^noYear.+?&quot;id&quot;:([0-9]+)[^}]+&quot;release_date&quot;:&quot;$$13</expression>
+			</RegExp>
+			<!-- coincidencia con título original o español y año-->
+			<RegExp input="$$18$$1" output="\1" dest="7">
+				<expression>^noYear.+?&quot;id&quot;:([0-9]+)[^}]+title&quot;:&quot;($$12|$$11)&quot;[^}]+&quot;release_date&quot;:&quot;$$13</expression>
+			</RegExp>
+			<!-- coincidencia con año y título original o español -->
+			<RegExp input="$$18$$1" output="\1" dest="7">
+				<expression>^noYear.+?&quot;id&quot;:([0-9]+)[^}]+&quot;release_date&quot;:&quot;$$13[^}]+title&quot;:&quot;($$12|$$11)&quot;</expression>
+			</RegExp>
+			
+			<!-- si no tenemos ni TMDBid ni IMDBid en $$6$$7 buscamos el IMDBid en IMDB a través de Google -->
+			<!-- sólo lo hacemos en caso de que no se haya buscado ya en Google previamente -->
+			<RegExp conditional="!GoogleAdvSearch" input="$$6$$7$$18" output="&lt;url function=&quot;GetIMDBid&quot;&gt;$$9&lt;/url&gt;" dest="5+">
+				<!-- buscamos título en español de $$11 sin año -->
+				<RegExp input="$$11" output="\1+" dest="9">
+					<!-- caracteres latinos UTF-8, números y aperturas de paréntesis -->
+					<!-- fuente: http://www.w3schools.com/charsets/ref_html_utf8.asp -->
+					<expression repeat="yes">([\(:a-zA-Z0-9&#192;-&#591;&;]+)</expression>
+				</RegExp>
+				<RegExp input="$$9" output="\1" dest="9">
+					<expression>(.+?)[\(:]</expression>
+				</RegExp>
+				<!-- la búsqueda multi obtiene ids que no se corresponden sólo a películas -->
+				<!-- <RegExp input="$$9" output="https://api.themoviedb.org/3/search/multi?api_key=$$19&amp;query=\1" dest="9"> -->
+				<RegExp input="$$9" output="https://api.themoviedb.org/3/search/movie?api_key=$$19&amp;query=\1" dest="9">
+					<expression noclean="1" />
+				</RegExp>
+				<expression>^0$</expression>
+			</RegExp>
+			
+			<!-- usamos $$18 para marcar que ya hemos pasado por aquí -->
+			<RegExp input="" output="noYear" dest="18">
+				<expression noclean="1" />
 			</RegExp>
 			
 			<!-- obtención del id de TMDB a través de nfourl (sobreescribe si $$17 contiene algo) -->
@@ -297,26 +346,6 @@
 			<!-- obtención del id de IMDB a través de TMDB -->
 			<RegExp input="$$7" output="<url cache=&quot;tmdb-$INFO[tmdblanguage]-\1.json&quot; function=&quot;GetTMDBIMDBid&quot;>https://api.themoviedb.org/3/movie/\1?api_key=$$19&amp;language=$INFO[tmdblanguage]</url>" dest="5+">
 				<expression>([0-9]+)</expression>
-			</RegExp>
-			
-			<!-- si no hay TMDBid en $$7 buscamos de nuevo en TMDB, pero esta vez sin año y con título original -->
-			<RegExp conditional="!GoogleAdvSearch" input="$$7" output="&lt;url function=&quot;GetIMDBid&quot;&gt;$$9&lt;/url&gt;" dest="5+">
-				<!-- descomponemos en palabras el título y las unimos con "+" -->
-				<!-- título en español en $$11, título original en $$12 -->
-				<RegExp input="$$11" output="\1+" dest="9">
-					<!-- caracteres latinos UTF-8, números y aperturas de paréntesis -->
-					<!-- fuente: http://www.w3schools.com/charsets/ref_html_utf8.asp -->
-					<expression repeat="yes">([\(a-zA-Z0-9&#192;-&#591;]+)</expression>
-				</RegExp>
-				<!-- búsqueda en TMDB -->
-				<RegExp input="$$9" output="https://api.themoviedb.org/3/search/movie?api_key=$$19&amp;query=\1&amp;language=$INFO[tmdblanguage]" dest="9">
-					<!-- nos quedamos con el título sólo hasta encontrar (o no) una apertura de paréntesis -->
-					<RegExp input="$$9" output="\1" dest="9">
-						<expression>([^\(]+)</expression>
-					</RegExp>
-					<expression noclean="1" />
-				</RegExp>
-				<expression>^$</expression>
 			</RegExp>
 			
 			<expression noclean="1" />
