@@ -1,3 +1,12 @@
+[B]1.9.7[/B]
+
+- Revisada la búsqueda de país en FA
+- Mejorada la búsqueda de información adicional en TMDB
+
+[B]1.9.6[/B]
+
+- Corregida la búsqueda de información adicional en TMDB
+
 [B]1.9.5[/B]
 
 - Revisada la búsqueda de información adicional en TMDB
